Added the UI from previous attempt and made sure that compilation was successfull. New shade plugin added.